pioneer 网关服务-- 优化网关开发环境配置

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,17 +1,17 @@
-spring.application.name=glsx-ne-shield-gateway-server
+spring.application.name=ne-shield-pioneer-gateway-server
 logging.path=/data/java_log/jetty/${spring.application.name}/${spring.application.name}.log
 spring.main.allow-bean-definition-overriding=true
 #nacos\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
-spring.cloud.nacos.config.server-addr=192.168.0.63:8858
-spring.cloud.nacos.config.group=NESHIELD_DEV_GROUP
+spring.cloud.nacos.config.server-addr=112.74.125.238:8848
+spring.cloud.nacos.config.group=DEV_GROUP
 spring.cloud.nacos.config.prefix=${spring.application.name}
 spring.profiles.active=dev
 spring.cloud.nacos.config.file-extension=properties
 #\u03A2\uFFFD\uFFFD\uFFFD\uFFFDsentinel\uFFFD\uFFFDzipkin\uFFFD\uFFFDactuator\uFFFD\u0239\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
-spring.cloud.nacos.config.shared-configs[0].data-id=glsx-rest-microservice-share.properties
+spring.cloud.nacos.config.shared-configs[0].data-id=pioneer-rest-microservice-share.properties
 spring.cloud.nacos.config.shared-configs[0].group=DEV_GROUP
 spring.cloud.nacos.config.shared-configs[0].refresh=true
 #\uFFFD\uFFFD\uFFFD\u077F\u2862redis\uFFFD\u0239\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
-spring.cloud.nacos.config.shared-configs[1].group=NESHIELD_DEV_GROUP
-spring.cloud.nacos.config.shared-configs[1].data-id=glsx-ne-shield-share-dev.properties
+spring.cloud.nacos.config.shared-configs[1].group=DEV_GROUP
+spring.cloud.nacos.config.shared-configs[1].data-id=pioneer-ne-shield-share-dev.properties
 spring.cloud.nacos.config.shared-configs[1].refresh=true
